@@ -1,5 +1,5 @@
 AC_PREREQ(2.57)
-AC_INIT(Judy, 1.0.0, doug@sourcejudy.com)
+AC_INIT(Judy, 1.0.5, dougbaskins@yahoo.com)
 
 AM_MAINTAINER_MODE
 
@@ -179,20 +179,35 @@ AC_C_BIGENDIAN(, AC_DEFINE(JU_LITTLE_ENDIAN, 1,
 dnl  Figure out if we are 32-bit or 64-bit (LP64)
 AC_CHECK_SIZEOF(void *)
 if test "$ac_cv_sizeof_void_p" = 8; then 
-    AC_MSG_RESULT(Building 64-bit)
-    if test x"$GCC" = xyes; then
-      CFLAGS="-DJU_64BIT -m64 $CFLAGS"
-    else
-      CFLAGS="-DJU_64BIT $CFLAGS"
-    fi
+    AC_MSG_RESULT(Detected 64-bit Build Environment)
+    CFLAGS="-DJU_64BIT $CFLAGS"
 else 
-    AC_MSG_RESULT(Building 32-bit)
+    AC_MSG_RESULT(Detected 32-bit Build Environment)
+      CFLAGS="-UJU_64BIT $CFLAGS"
+fi
+
+AC_ARG_ENABLE(32-bit, [  --enable-32-bit          Generate code for a 32-bit environment],
+	      b32="$enableval", b32="no")
+if test x"$b32" != "xno"; then
+    AC_MSG_RESULT(Configured to Build 32-bit)
     if test x"$GCC" = xyes; then
       CFLAGS="-UJU_64BIT -m32 $CFLAGS"
     else
       CFLAGS="-UJU_64BIT $CFLAGS"
     fi
 fi
+
+AC_ARG_ENABLE(64-bit, [  --enable-64-bit          Generate code for a 64-bit environment],
+              b64="$enableval", b64="no")
+if test x"$b64" != "xno"; then
+    AC_MSG_RESULT(Configured to Building 64-bit)
+    if test x"$GCC" = xyes; then
+      CFLAGS="-DJU_64BIT -m64 $CFLAGS"
+    else
+      CFLAGS="-DJU_64BIT $CFLAGS"
+    fi
+fi
+
 
 
 #  dnl Determine whether or not we're compiling for a 64-bit system by looking
