@@ -1,0 +1,8 @@
+This directory contains example programs that show some of the many ways Judy
+can be utilized, in other words it contains useful applications of Judy.
+
+Judy1Dup:	Clone (duplicate) a Judy Array.
+
+Judy1Op:	Support Logical "set" operations on Judy1 arrays.
+
+See the source code for more information.
