@@ -4,3 +4,5 @@ AM_CFLAGS = @CFLAGS@ @WARN_CFLAGS@
 noinst_PROGRAMS = jhton
 
 jhton_SOURCES = jhton.c
+
+DISTCLEANFILES = .deps Makefile
