@@ -1,6 +1,8 @@
 1.0.5  Version (May 2007) by (twh)
 o added proper clean targets to enable multiple builds
 o added examples directory
+o Correctly Detects 32/64-bit build environment
+o Allow explicit configure for 32/64-bit environment
 
 1.0.4  Version (May 2007) by (twh)
 o fixed the Checkit problem "error Judy1PrevEmpty Rcode != 1 = 0"
